--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "UniqueSubsetGeneratorwithSUmToo",
+      "request": "launch",
+      "mainClass": "UniqueSubsetGeneratorwithSUmToo",
+      "projectName": "LEET_DSA_b1651a34"
+    },
+    {
+      "type": "java",
+      "name": "CheckItsPowerOfN",
+      "request": "launch",
+      "mainClass": "CheckItsPowerOfN",
+      "projectName": "LEET_DSA_b1651a34"
+    },
+    {
+      "type": "java",
       "name": "LInkedInsertion",
       "request": "launch",
       "mainClass": "LInkedInsertion",
