--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Rough",
+      "request": "launch",
+      "mainClass": "Rough.Rough",
+      "projectName": "LEET_DSA_b1651a34"
+    },
+    {
+      "type": "java",
       "name": "LongestCompleteString",
       "request": "launch",
       "mainClass": "TRIE.LongestCompleteString",
